# Doc-Guardian

./: .gitignore  .markdownlint.json  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  CONFIG_GUIDE.md  CONTRIBUTING.md  CUSTOMIZATION.md  CUSTOM_HEALER_QUICKSTART.md  LICENSE  MANIFEST.in  README.md  config.toml  config.toml.template  pyproject.toml  requirements-dev.txt  requirements.txt  test_utilities.sh  validate_custom_healer.sh
.github/: CI_CD.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  README.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_COMPARISON.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
docs/: CUSTOM_HEALERS.md
docs/guides/: CONFIDENCE_MODEL.md  GIT_INTEGRATION.md  TROUBLESHOOTING.md  VALIDATION_FRAMEWORK.md
docs/healers/: manage_collapsed.md  sync_canonical_comparison.md
docs/reference/: API.md  CLI.md  CONFIGURATION.md
examples/: README.md  __init__.py  manage_collapsed_example.py  sync_canonical_config.yaml
examples/custom_healer_example/: README.md  config.toml  demo.sh  fix_typos_healer.py  test_fix_typos.py
examples/custom_healer_example/sample_docs/: guide.md  reference.md
examples/templates/: classifier.py.j2  model_codes_section.md.j2
guardian/: UTILITIES.md  __init__.py  heal.py  install.py  rollback.py
guardian/core/: README.md  __init__.py  atomic_write.py  base.py  colors.py  confidence.py  config_validator.py  file_cache.py  git_utils.py  logger.py  path_validator.py  regex_validator.py  reporting.py  security.py  signal_handlers.py  validation.py
guardian/healers/: README_sync_canonical.md  __init__.py  balance_references.py  detect_staleness.py  detect_staleness_usage.md  enforce_disclosure.py  enforce_disclosure_usage.md  fix_broken_links.py  manage_collapsed.py  resolve_duplicates.py  sync_canonical.py
integration-tests/: VERIFICATION_REPORT.md  __init__.py
integration-tests/markdown-wiki/: .doc-guardian-test  README.md  TEST_COVERAGE.md  config.toml  guardian  verify_issues.sh
integration-tests/markdown-wiki/docs/: index.md
integration-tests/markdown-wiki/docs/contributing/: code-style.md  development.md  testing.md
integration-tests/markdown-wiki/docs/getting-started/: configuration.md  installation.md  quick-start.md
integration-tests/markdown-wiki/docs/guides/: admin-guide.md  troubleshooting.md  user-guide.md
integration-tests/markdown-wiki/docs/reference/: api.md  cli.md  config.md
templates/: README.md  custom_healer.py  custom_healer_template.py
tests/: __init__.py  benchmark_performance.py  test_compatibility.py  test_config_validation.py  test_error_handling.py  test_manage_collapsed.py  test_resolve_duplicates_cascade.py  test_security.py  test_sync_canonical.py
